--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ol>
     <h2>HEROINE</h2>
 <strong>YEONGSEOK LEE ♥ ZIA LEE</strong>
-<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER FOREVER</P></a>
+<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER AFTER</P></a>
  
 <p>WEDDING INVITATION</p>
 
