--- a/3.html
+++ b/3.html
@@ -12,9 +12,9 @@
         <li><a href="2.html">DATE</a></li>
         <li><a href="3.html">LOCATION</a></li>
     </ol>
-    <h2>HEROINE</h2>
+    <h2>LOCATION</h2>
 <strong>YEONGSEOK LEE ♥ ZIA LEE</strong>
-<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER FOREVER</P></a>
+<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER AFTER</P></a>
  
 <p>보타닉파크웨딩</p>
 <p>지하철 SUBWAY</p>
