--- a/1.html
+++ b/1.html
@@ -14,9 +14,9 @@
     </ol>
     <h2>HEROINE</h2>
 <strong>YEONGSEOK LEE ♥ ZIA LEE</strong>
-<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER FOREVER</P></a>
+<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER AFTER</P></a>
  
-<p>신랑 이영석 GROOM YEONGSEOK LEE <br>신부 이지아 BRIDE IRAGIMOVA MAFTUNA</p>
+<p>신랑 이영석 GROOM YEONGSEOK LEE <br>신부 이지아 BRIDE IBRAGIMOVA MAFTUNA</p>
 <p style="margin-top:42px;">행복한 날 여러분을 초대합니다.</p>
 </body>
 </html>
