--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
     </ol>
     <h2>DATE</h2>
 <strong>YEONGSEOK LEE ♥ ZIA LEE</strong>
-<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER FOREVER</P></a>
+<P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER AFTER</P></a>
  
 <p>2024년 8월 31일 토요일 오후 6시 50분</p>
 <p style="margin-top:42px;">행복한 날 여러분을 초대합니다.</p>
