--- a/1.html
+++ b/1.html
@@ -12,15 +12,33 @@
 </script>
 <title>WEDDING</title>
 <meta charset="utf-8">
+<style>
+    a {
+        color:palevioletred;
+        text-decoration: none;
+    }
+    h1 {
+        font-size:60px;
+        text-align: center;
+    }
+    #active {
+        color:red;
+    }
+    .saw {
+        color:gray;
+    }
+
+
+</style>
 </head>
 
 <body>
-    <h1><a href="index.html">WEDDING</a></h1>
-    <ol>
-        <li><a href="1.html">HEROINE</a></li></li>
-        <li><a href="2.html">DATE</a></li>
-        <li><a href="3.html">LOCATION</a></li>
-    </ol>
+    <h1><a href="index.html" >WEDDING</a></h1>
+        <li><a href="1.html" class="saw">HEROINE</a></li>
+        <li><a href="2.html" class="saw">DATE</a></li>
+        <li><a href="3.html" class="saw">LOCATIONN</a></li>
+
+
     <h2>HEROINE</h2>
 <strong>YEONGSEOK LEE ♥ ZIA LEE</strong>
 <P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER AFTER</P></a>
