--- a/index.html
+++ b/index.html
@@ -10,25 +10,60 @@
 
   gtag('config', 'G-FEGNJ9YZJ6');
 </script>
+<!--여기서 부터 시작-->
 <title>WEDDING</title>
 <meta charset="utf-8">
+<style>
+        /*
+        block level element
+        */
+    a {
+        color:palevioletred;
+        text-decoration: none;
+    }
+    h1 {
+        font-size:60px;
+        text-align: center;
+        border-width: 1px;
+        border-color: black;
+        border-style: dashed;
+        
+    }
+    #active {
+        color:red;
+    }
+    .saw {
+        color:gray;
+    }
+
+
+</style>
 </head>
 
 <body>
-    <h1><a href="index.html">WEDDING</a></h1>
+    <h1><a href="index.html" >WEDDING</a></h1>
+        <li><a href="1.html" class="saw">HEROINE</a></li>
+        <li><a href="2.html" class="saw">DATE</a></li>
+        <li><a href="3.html" class="saw">LOCATIONN</a></li>
+       
+<!--
+    <h1><a href="index.html"><font color="red">WEDDING</font></a></h1>
     <ol>
-        <li><a href="1.html">HEROINE</a></li>
-        <li><a href="2.html">DATE</a></li>
-        <li><a href="3.html">LOCATION</a></li>
+        <li><a href="1.html"><font color="red">HEROINE</font></a></li>
+        <li><a href="2.html"><font color="red">DATE</font></a></li>
+        <li><a href="3.html"><font color="red">LOCATIONN</font></a></li>
     </ol>
+-->
+
     <h2>HEROINE</h2>
 <strong>YEONGSEOK LEE ♥ ZIA LEE</strong>
 <P><a href="https://dvprogram.state.gov/ESC/CheckStatus.aspx" target="_blank" title="DV비자확인">HAPPYLEE EVER AFTER</P></a>
  
 <p>WEDDING INVITATION</p>
 <P>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ivrumxRUz_Y?si=Qcn39POr_BSS6mD0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZWgL-6SLfjQ?si=qAoX4lQ4MdzOx8z7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </P>
+</body>
 <p>
 
     <div id="disqus_thread"></div>
